BiaPy training fixes, contributors, tutorial, bib and data source

--- a/topics/imaging/tutorials/biapy/tutorial.bib
+++ b/topics/imaging/tutorials/biapy/tutorial.bib
@@ -36,4 +36,13 @@
   publisher={Nature Publishing Group UK London}
 }
 
-
+@article{andres2023cartocell,
+  title={CartoCell, a high-content pipeline for 3D image analysis, unveils cell morphology patterns in epithelia},
+  url = {https://www.cell.com/cell-reports-methods/fulltext/S2667-2375(23)00249-7},
+  author={Andres-San Roman, Jesus A and Gordillo-Vazquez, Carmen and Franco-Barranco, Daniel and Morato, Laura and Fern{\'a}ndez-Espartero, Cecilia H and Baonza, Gabriel and Tagua, Antonio and Vicente-Munuera, Pablo and Palacios, Ana M and Gavil{\'a}n, Mar{\'\i}a P and others},
+  journal={Cell Reports Methods},
+  volume={3},
+  number={10},
+  year={2023},
+  publisher={Elsevier}
+}
